Enhance XAMPP-like environment setup with improved error handling, health checks, and updated configurations

--- a/.devcontainer/apache/apache2.conf
+++ b/.devcontainer/apache/apache2.conf
@@ -1,5 +1,8 @@
 # Apache2 Configuration for XAMPP-like Environment
+# Simplified for GitHub Codespaces compatibility
 
+# Basic server configuration
+ServerRoot /etc/apache2
 DefaultRuntimeDir ${APACHE_RUN_DIR}
 PidFile ${APACHE_PID_FILE}
 Timeout 300
@@ -7,20 +10,26 @@ KeepAlive On
 MaxKeepAliveRequests 100
 KeepAliveTimeout 5
 
+# User and group
 User ${APACHE_RUN_USER}
 Group ${APACHE_RUN_GROUP}
 
+# Hostname lookups
 HostnameLookups Off
 
+# Error and access logs
 ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
 
+# Load modules
 IncludeOptional mods-enabled/*.load
 IncludeOptional mods-enabled/*.conf
 
+# Listen on ports
 Listen 80
 Listen 443
 
+# Directory permissions
 <Directory />
     Options FollowSymLinks
     AllowOverride None
@@ -38,32 +47,27 @@ Listen 443
     Require all granted
 </Directory>
 
+# Access file name
 AccessFileName .htaccess
 
+# Deny access to .htaccess files
 <FilesMatch "^\.ht">
     Require all denied
 </FilesMatch>
 
+# Log formats
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
 LogFormat "%h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %O" common
-LogFormat "%{Referer}i -> %U" referer
-LogFormat "%{User-agent}i" agent
 
+# Include configuration files
 IncludeOptional conf-enabled/*.conf
 IncludeOptional sites-enabled/*.conf
 
-# Security headers
-Header always set X-Content-Type-Options nosniff
-Header always set X-Frame-Options DENY
-Header always set X-XSS-Protection "1; mode=block"
+# Enable mod_dir for directory indexes
+DirectoryIndex index.php index.html index.htm welcome.html
 
-# Enable compression
-LoadModule deflate_module modules/mod_deflate.so
-<Location />
-    SetOutputFilter DEFLATE
-    SetEnvIfNoCase Request_URI \
-        \.(?:gif|jpe?g|png)$ no-gzip dont-vary
-    SetEnvIfNoCase Request_URI \
-        \.(?:exe|t?gz|zip|bz2|sit|rar)$ no-gzip dont-vary
-</Location>
+# Enable mod_php for PHP processing
+<FilesMatch \.php$>
+    SetHandler application/x-httpd-php
+</FilesMatch>
