--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,9 +14,7 @@
       "extensions": [
         "ms-vscode.vscode-json",
         "bmewburn.vscode-intelephense-client",
-        "xdebug.php-debug",
-        "ms-vscode.hexeditor",
-        "formulahendry.auto-rename-tag"
+        "xdebug.php-debug"
       ]
     }
   },
@@ -41,9 +39,6 @@
     }
   },
   
-  "postCreateCommand": "chmod +x /usr/local/bin/setup-xampp.sh && /usr/local/bin/setup-xampp.sh",
-  
   "shutdownAction": "none",
-  
   "remoteUser": "root"
 }
