--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - "443:443"
     volumes:
       - ../:/var/www/html
-      - ./apache/apache2.conf:/etc/apache2/apache2.conf:ro
-      - ./apache/sites-available/000-default.conf:/etc/apache2/sites-available/000-default.conf:ro
-      - ./php/php.ini:/usr/local/etc/php/php.ini:ro
+      - ./apache/apache2.conf:/etc/apache2/apache2.conf
+      - ./apache/sites-available/000-default.conf:/etc/apache2/sites-available/000-default.conf
+      - ./php/php.ini:/usr/local/etc/php/php.ini
     depends_on:
       mysql:
         condition: service_healthy
@@ -37,7 +37,7 @@ services:
       MYSQL_PASSWORD: xampp
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./mysql/init:/docker-entrypoint-initdb.d:ro
+      - ./mysql/init:/docker-entrypoint-initdb.d
     networks:
       - xampp-network
     healthcheck:
@@ -67,7 +67,6 @@ services:
 
 volumes:
   mysql_data:
-    driver: local
 
 networks:
   xampp-network:
