Refactor XAMPP-like environment setup: streamline Dockerfile, update PHP extensions, and enhance documentation

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,48 +3,34 @@ FROM php:8.2-apache
 # Set working directory
 WORKDIR /var/www/html
 
-# Install system dependencies
+# Install system dependencies (essential only)
 RUN apt-get update && apt-get install -y \
     curl \
-    wget \
     git \
     unzip \
     libpng-dev \
     libonig-dev \
-    libxml2-dev \
     libzip-dev \
     libfreetype6-dev \
     libjpeg62-turbo-dev \
-    libicu-dev \
     mariadb-client \
-    vim \
-    nano \
     && rm -rf /var/lib/apt/lists/*
 
-# Install PHP extensions
+# Install PHP extensions (basic and essential only)
 RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) \
         pdo \
         pdo_mysql \
         mysqli \
         mbstring \
-        exif \
-        pcntl \
-        bcmath \
         gd \
-        zip \
-        intl \
-        xml
+        zip
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Enable Apache modules
 RUN a2enmod rewrite ssl headers expires proxy proxy_http
-
-# Install Node.js and npm
-RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
-    && apt-get install -y nodejs
 
 # Copy setup script
 COPY setup-xampp.sh /usr/local/bin/setup-xampp.sh
