--- a/.devcontainer/php/php.ini
+++ b/.devcontainer/php/php.ini
@@ -95,24 +95,12 @@ session.hash_bits_per_character = 5
 ; Date and Time
 date.timezone = "UTC"
 
-; Extensions
+; Extensions (essential only)
 extension=pdo_mysql
 extension=mysqli
 extension=mbstring
-extension=curl
 extension=gd
 extension=zip
-extension=xml
-extension=intl
-extension=soap
-
-[curl]
-; CURL Settings
-curl.cainfo =
-
-[openssl]
-; OpenSSL Settings
-openssl.cafile=
 
 [Pdo_mysql]
 ; PDO MySQL Settings
