--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,19 +19,23 @@
     }
   },
   
-  "forwardPorts": [80, 443, 3306],
+  "forwardPorts": [80, 443, 3306, 8080],
   "portsAttributes": {
     "80": {
-      "label": "Apache Web Server (HTTP) - includes /phpmyadmin",
+      "label": "Apache Web Server (HTTP)",
       "onAutoForward": "notify"
     },
     "443": {
-      "label": "Apache Web Server (HTTPS) - includes /phpmyadmin", 
+      "label": "Apache Web Server (HTTPS)", 
       "onAutoForward": "notify"
     },
     "3306": {
       "label": "MySQL Database",
       "onAutoForward": "silent"
+    },
+    "8080": {
+      "label": "phpMyAdmin",
+      "onAutoForward": "notify"
     }
   },
   
