--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,9 @@
 {
-  "name": "XAMPP-like Environment (PHP 8.2+, MySQL 8.0+, phpMyAdmin)",
-  "dockerComposeFile": "docker-compose.yml",
-  "service": "web",
-  "workspaceFolder": "/var/www/html",
+  "name": "XAMPP-like Environment (PHP 8.2+, MariaDB, phpMyAdmin)",
+  "build": { 
+    "dockerfile": "Dockerfile" 
+  },
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   
   "features": {
     "ghcr.io/devcontainers/features/git:1": {},
@@ -19,22 +20,10 @@
     }
   },
   
-  "forwardPorts": [80, 443, 3306, 8080],
+  "forwardPorts": [80],
   "portsAttributes": {
     "80": {
-      "label": "Apache Web Server (HTTP)",
-      "onAutoForward": "notify"
-    },
-    "443": {
-      "label": "Apache Web Server (HTTPS)", 
-      "onAutoForward": "notify"
-    },
-    "3306": {
-      "label": "MySQL Database",
-      "onAutoForward": "silent"
-    },
-    "8080": {
-      "label": "phpMyAdmin",
+      "label": "Apache Web Server",
       "onAutoForward": "notify"
     }
   },
