--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,32 +1,34 @@
-# Use an official Ubuntu as a parent image
-FROM ubuntu:20.04
+# Use official PHP 8.2 with Apache
+FROM php:8.2-apache
 
 # Set environment variables to avoid interactive prompts
 ENV DEBIAN_FRONTEND=noninteractive
 
-# Install dependencies and PHP 8.2
+# Install system dependencies and MariaDB
 RUN apt-get update && apt-get install -y \
-    software-properties-common \
-    sudo \
-    && add-apt-repository ppa:ondrej/php \
-    && apt-get update && apt-get install -y \
-    php8.2 \
-    php8.2-mysql \
-    php8.2-mysqli \
-    php8.2-pdo \
-    php8.2-pdo-mysql \
-    php8.2-mbstring \
-    php8.2-gd \
-    php8.2-zip \
-    apache2 \
-    libapache2-mod-php8.2 \
-    mariadb-server \
-    mariadb-client \
-    wget \
-    unzip \
     curl \
     git \
+    unzip \
+    wget \
+    sudo \
+    libpng-dev \
+    libonig-dev \
+    libzip-dev \
+    libfreetype6-dev \
+    libjpeg62-turbo-dev \
+    mariadb-server \
+    mariadb-client \
     && rm -rf /var/lib/apt/lists/*
+
+# Install PHP extensions
+RUN docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) \
+        pdo \
+        pdo_mysql \
+        mysqli \
+        mbstring \
+        gd \
+        zip
 
 # Install phpMyAdmin
 RUN wget https://www.phpmyadmin.net/downloads/phpMyAdmin-latest-all-languages.zip -O /tmp/phpmyadmin.zip \
@@ -35,13 +37,13 @@ RUN wget https://www.phpmyadmin.net/downloads/phpMyAdmin-latest-all-languages.zi
     && rm /tmp/phpmyadmin.zip
 
 # Enable Apache modules
-RUN a2enmod php8.2 rewrite ssl headers
-
-# Set the ServerName directive globally to suppress the warning
-RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
+RUN a2enmod rewrite ssl headers
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+# Set the ServerName directive globally to suppress the warning
+RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
 # Expose port 80
 EXPOSE 80
