--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "XAMPP-like Development Environment",
+  "name": "Basic PHP & MySQL Environment",
   "dockerComposeFile": "../docker-compose.yml",
   "service": "php-apache",
   "workspaceFolder": "/var/www/html",
@@ -7,117 +7,29 @@
   
   "features": {
     "ghcr.io/devcontainers/features/common-utils:2": {
-      "installZsh": true,
-      "configureZshAsDefaultShell": true,
-      "installOhMyZsh": true,
+      "installZsh": false,
       "upgradePackages": true,
-      "username": "vscode",
-      "userUid": "automatic",
-      "userGid": "automatic"
-    },
-    "ghcr.io/devcontainers/features/git:1": {
-      "ppa": true,
-      "version": "latest"
+      "username": "vscode"
     }
   },
 
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-vscode.vscode-json",
         "bmewburn.vscode-intelephense-client",
-        "xdebug.php-debug",
-        "formulahendry.auto-rename-tag",
-        "bradlc.vscode-tailwindcss",
-        "ms-vscode.live-server",
-        "PKief.material-icon-theme",
-        "GitHub.copilot",
-        "GitHub.copilot-chat"
+        "formulahendry.auto-rename-tag"
       ],
       "settings": {
         "php.validate.executablePath": "/usr/local/bin/php",
-        "php.suggest.basic": false,
-        "intelephense.stubs": [
-          "apache",
-          "bcmath",
-          "bz2",
-          "calendar",
-          "com_dotnet",
-          "Core",
-          "ctype",
-          "curl",
-          "date",
-          "dba",
-          "dom",
-          "enchant",
-          "exif",
-          "FFI",
-          "fileinfo",
-          "filter",
-          "fpm",
-          "ftp",
-          "gd",
-          "gettext",
-          "gmp",
-          "hash",
-          "iconv",
-          "imap",
-          "intl",
-          "json",
-          "ldap",
-          "libxml",
-          "mbstring",
-          "meta",
-          "mysqli",
-          "oci8",
-          "odbc",
-          "openssl",
-          "pcntl",
-          "pcre",
-          "PDO",
-          "pgsql",
-          "Phar",
-          "posix",
-          "pspell",
-          "readline",
-          "Reflection",
-          "session",
-          "shmop",
-          "SimpleXML",
-          "snmp",
-          "soap",
-          "sockets",
-          "sodium",
-          "SPL",
-          "sqlite3",
-          "standard",
-          "superglobals",
-          "sysvmsg",
-          "sysvsem",
-          "sysvshm",
-          "tidy",
-          "tokenizer",
-          "xml",
-          "xmlreader",
-          "xmlrpc",
-          "xmlwriter",
-          "xsl",
-          "Zend OPcache",
-          "zip",
-          "zlib"
-        ]
+        "php.suggest.basic": true
       }
     }
   },
 
-  "forwardPorts": [80, 443, 3306, 8080],
+  "forwardPorts": [80, 3306, 8080],
   "portsAttributes": {
     "80": {
-      "label": "Apache HTTP",
-      "onAutoForward": "notify"
-    },
-    "443": {
-      "label": "Apache HTTPS",
+      "label": "Web Server",
       "onAutoForward": "notify"
     },
     "3306": {
