--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,10 +44,15 @@ services:
     container_name: basic-phpmyadmin
     ports:
       - "8080:80"
+    volumes:
+      - ./config/phpmyadmin/config.inc.php:/etc/phpmyadmin/config.inc.php
     environment:
       PMA_HOST: mysql
       PMA_USER: root
       PMA_PASSWORD: root
+      PMA_ABSOLUTE_URI: /
+      PMA_PORT: 3306
+      HIDE_PHP_VERSION: true
     depends_on:
       - mysql
     networks:
