--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,19 +26,15 @@
     }
   },
 
-  "forwardPorts": [80, 3306, 8080],
+  "forwardPorts": [80, 3306],
   "portsAttributes": {
     "80": {
-      "label": "Web Server",
+      "label": "Web Server (includes phpMyAdmin at /phpmyadmin)",
       "onAutoForward": "notify"
     },
     "3306": {
       "label": "MySQL",
       "onAutoForward": "silent"
-    },
-    "8080": {
-      "label": "phpMyAdmin",
-      "onAutoForward": "notify"
     }
   },
 
